--- a/emacs/config.org
+++ b/emacs/config.org
@@ -114,8 +114,8 @@ Add a nice visualization for tabs and spaces. This can be helpful to identify wh
   (setq whitespace-global-modes '(not org-mode dired-mode))
   (setq whitespace-style '(face tabs spaces tab-mark space-mark trailing))
   (custom-set-faces
-    '(whitespace-tab ((t (:foreground "#384551" :background nil))))
-    '(whitespace-space ((t (:foreground "#384551" :background nil)))))
+    '(whitespace-tab ((t (:foreground "#384551"))))
+    '(whitespace-space ((t (:foreground "#384551")))))
 
 
   (setq whitespace-display-mappings
@@ -574,21 +574,30 @@ Visual fill column is a package that allows you to center text and add borders t
 Org-roam is a plain-text knowledge management system. It brings some of Roam's more powerful features into the Org-mode ecosystem such as org-file linking, etc.
 
 #+begin_src emacs-lisp
-(use-package org-roam
-  :ensure t
-  :custom
-  (org-roam-directory "~/Notes")
-  :bind (("C-c n l" . org-roam-buffer-toggle)
-         ("C-c n f" . org-roam-node-find)
-         ("C-c n g" . org-roam-graph)
-         ("C-c n i" . org-roam-node-insert)
-         ("C-c n c" . org-roam-capture)
-         ;; Dailies
-         ("C-c n j" . org-roam-dailies-capture-today))
-  :config
-  ;; If you're using a vertical completion framework, you might want a more informative completion interface
-  (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
-  (org-roam-db-autosync-mode))
+  (use-package org-roam
+    :ensure t
+    :defer
+    :custom
+    (org-roam-directory "~/Notes")
+    :bind (("C-c n l" . org-roam-buffer-toggle)
+           ("C-c n f" . org-roam-node-find)
+           ("C-c n g" . org-roam-graph)
+           ("C-c n i" . org-roam-node-insert)
+           ("C-c n c" . org-roam-capture)
+           ;; Dailies
+           ("C-c n j" . org-roam-dailies-capture-today))
+    :config
+    ;; If you're using a vertical completion framework, you might want a more informative completion interface
+    (setq org-roam-capture-templates
+          '(("d" "default" plain "%?"
+             :target (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+             :unnarrowed t)
+            ("p" "Programming Project" plain
+             (file "~/Notes/Templates/ProgrammingProject.org")
+             :target (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+             :unnarrowed t)))
+    (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
+    (org-roam-db-autosync-mode))
 #+end_src
 
 ** Fix Snippets
